# stal

./: .gitignore  Cargo.toml
stal-cli/: Cargo.toml
stal-cli/src/: main.rs
stal-cli/src/cli/: dataset.rs  mod.rs  model.rs
stal-core/: Cargo.toml
stal-core/src/: lib.rs
stal-core/src/model/: bayesian.rs  mod.rs
