[package]
name = "stal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["default", "derive"] }
env_logger = "0.11.3"
fsio = "0.4.0"
log = "0.4.21"
serde_json = "1.0.117"
stal-core = { path = "../stal-core" }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
walkdir = "2.5.0"
normpath = "1.2.0"
