[package]
name = "stal-core"
version = "0.1.0"
edition = "2021"

[dependencies]
charabia = "0.8.11"
linfa = "0.7.0"
linfa-bayes = { version = "0.7.0", features = ["serde"] }
log = "0.4.21"
ndarray = "0.15.6"
postcard = "1.0.8"
serde = { version = "1.0.203", features = ["derive"] }
text-splitter = "0.13.3"
